# indoor

./: .gitignore  README.md  settings.gradle
NavigatorLib/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake
NavigatorLib/NavigatorJson/: CMakeLists.txt  README.Build.md  main.cpp
NavigatorLib/NavigatorJson/ItJim/: JsonDataContract.cpp
NavigatorLib/arch/: Calibrate-arch.puml  Navigator-arch.puml
NavigatorLib/example/: CMakeLists.txt  main.cpp
NavigatorLib/exampleCalibrate/: CMakeLists.txt  main.cpp
NavigatorLib/examples/: CMakeLists.txt  README.md
NavigatorLib/examples/TempVictor/: CMakeLists.txt  main.cpp
NavigatorLib/examples/example1/: CMakeLists.txt  main.cpp
NavigatorLib/examples/example2/: CMakeLists.txt  main.cpp
NavigatorLib/examples/example3/: CMakeLists.txt  main.cpp
NavigatorLib/examples/example4/: CMakeLists.txt  main.cpp
NavigatorLib/examples/example5/: CMakeLists.txt  main.cpp
NavigatorLib/examples/example6/: CMakeLists.txt  main.cpp
NavigatorLib/examples/exampleAccel/: CMakeLists.txt  main.cpp
NavigatorLib/examples/exampleCalibrate/: CMakeLists.txt  main.cpp
NavigatorLib/examples/exampleDijkstra/: CMakeLists.txt  main.cpp
NavigatorLib/examples/exampleMesh/: CMakeLists.txt  main.cpp
NavigatorLib/examples/exampleMesh2/: CMakeLists.txt  main.cpp
NavigatorLib/examples/exampleZUPT/: CMakeLists.txt  main.cpp
NavigatorLib/examples/kalmantest/: CMakeLists.txt  main.cpp
NavigatorLib/examples/kalmantest2/: CMakeLists.txt  main.cpp
NavigatorLib/examples/navitest/: CMakeLists.txt  main.cpp
NavigatorLib/examples/parttest1/: CMakeLists.txt  main.cpp
NavigatorLib/examples/testKalmanFilterByVictor/: CMakeLists.txt  main.cpp
NavigatorLib/examples/testKalmanXYFilterByVictor/: CMakeLists.txt  main.cpp
NavigatorLib/examples/testParticle/: CMakeLists.txt  main.cpp
NavigatorLib/fun/: CMakeLists.txt  main.cpp
NavigatorLib/fun/fun1/: CMakeLists.txt  in.txt  main.cpp
NavigatorLib/include/: Navigator.h
NavigatorLib/include/Navigator/: INavigator.h  InputNavigationData.h  OutputNavigationData.h
NavigatorLib/lib/: README.md
NavigatorLib/lib/Eigen/: Cholesky  CholmodSupport  Core  Eigenvalues  IterativeLinearSolvers  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  SPQRSupport  SVD  SparseCholesky  SparseCore  SparseLU  SparseQR  StdDeque  StdList  StdVector  SuperLUSupport  UmfPackSupport
NavigatorLib/navigator_lib/: AbstractBeaconNavigator.h  Beacon.h  BeaconReceivedData.h  BeaconUID.h  CMakeLists.txt  Doxyfile  IFilter.h  INavigator.h  InputNavigationData.h  NoFilter.h  OutputNavigationData.h  Position3D.h  README.md  TrilatBeaconNavigator.cpp  TrilatBeaconNavigator.h
NavigatorLib/navigator_lib/Beacon/: BeaconProcessor.h
NavigatorLib/navigator_lib/Beacons/: AbstractBeaconNavigator.h  Beacon.h  BeaconProcessor.h  BeaconReceivedData.h  BeaconUID.h  Position3D.h  TrilatBeaconNavigator.cpp  TrilatBeaconNavigator.h
NavigatorLib/navigator_lib/Math/: AlphaBetaFilter.cpp  AlphaBetaFilter.h  IFilter.h  NoFilter.h  Position3D.h  RingBuffer.h
NavigatorLib/navigator_lib/Mira/: AbstractBeaconNavigator.h  BeaconUID.h  TrilatBeaconNavigator.cpp
NavigatorLib/navigator_lib/beacon/: AbstractBeaconNavigator.h  Beacon.h  BeaconProcessor.h  BeaconReceivedData.h  BeaconUID.h  Position3D.h  TrilatBeaconNavigator.cpp  TrilatBeaconNavigator.h
NavigatorLib/navigator_lib/filter/: AlphaBetaFilter.cpp  AlphaBetaFilter.h  IFilter.h  NoFilter.h  RingBuffer.h
NavigatorLib/src/: CMakeLists.txt
NavigatorLib/test/: CMakeLists.txt  CppUnit-main.cpp  cppunit_test-1.cpp  temp.cpp
NavigatorLib/test-tool/: CMakeLists.txt
NavigatorLib/test-tool/autotester/: AutoTesterEngine.cpp  AutoTesterEngine.h  CMakeLists.txt  Doxyfile  TestClass.cpp  global.cpp  main.cpp
NavigatorLib/test-tool/common_lib/: CMakeLists.txt  DoublePair.h  Doxyfile  Event.h  EventList.cpp  MyBeacon.h  MyBeaconList.h  MyBridge.cpp  MyBridge.h  Util.cpp  Vec3.h  Vec3t.cpp  Vec3t.h
NavigatorLib/test-tool/doc/: AutoTester.md  README.md
NavigatorLib/test-tool/faker/: CMakeLists.txt  FakeEngine.cpp  FakerConfig.cpp  FakerConfig.h
NavigatorLib/test/ItJim/: JsonDataContract.cpp  JsonDataContract.h
NavigatorLib/test/beacons-data-files/: 2017-24-02_06-31-51_bluetooth.json  2017-24-02_06-33-08_bluetooth.json  2017-24-02_06-34-52_bluetooth.json  2017-24-02_06-35-24_bluetooth.json  google.drive.url.desktop  Описание тестовых логов.docx
NavigatorLib/tools/: CMakeLists.txt  README.md
NavigatorLib/tools/acceltester/: Acceltester.cpp  Acceltester.h  CMakeLists.txt  Config.cpp  Config.h  Engine.cpp  Engine.h  Myjson.cpp  Myjson.h  Vec3.cpp  Vec3.h  accel.json  angles.json  iOS_accelerometer.json  iOS_angles.json  in_data.json  main.cpp  myjson.cpp  myjson.h
NavigatorLib/tools/dijkdemo/: CMakeLists.txt  graph.txt  graph1.txt  main.cpp
NavigatorLib/tools/maskdemo/: CMakeLists.txt  README.md  Rescaler.h  main.cpp
NavigatorLib/tools/maskdemo2/: CMakeLists.txt  main.cpp
NavigatorLib/tools/maskgen/: CMakeLists.txt  MaskData.h  MeshData.h  README.md  computeMaskTbl.cpp  computeMaskTbl.h  findNearest.cpp  findNearest.h  main.cpp
NavigatorLib/unittest/: CMakeLists.txt  DummyTest.cpp  DummyTest.h  MovingAverageFilterTest.cpp  MovingAverageFilterTest.h  RingBufferTest.cpp  RingBufferTest.h  main.cpp  mydoubleeq.h
tester/: CMakeLists.txt  MyBeacon.cpp  MyBeacon.h  MyBridge.cpp  MyBridge.h  README.md  main.cpp
tester/common_lib/: CMakeLists.txt  Event.cpp  MyBeacon.cpp
tester/faker/: CMakeLists.txt  Event.cpp  Event.h  FakeEngine.cpp  FakeEngine.h  MyBeacon.cpp  Vec3.cpp  Vec3.h  main.cpp
tester/tester/: CMakeLists.txt  Engine.cpp  Engine.h  MyBeacon.h  MyBridge.cpp  MyBridge.h  main.cpp
tester/tracking_lib/: CMakeLists.txt  abstractsensor.h  accelerometersensor.cpp  accelerometersensor.h  amath.h  beaconsensor.h  bmath.cpp  common_types.h  common_types_lib_dependence.h  imath.cpp  kalman_interface.h  navigator.cpp  navigator.h  objectstate.cpp  smartptr.cpp  utilities.h
tools/test-tool/: CMakeLists.txt  README.md
(+1715 files in other folders)
